draft employee toList Changes